--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@angular-package/ui",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha",
+  "description": "Configurable user interface.",
+  "author": "@angular-package <contact@angular-package.dev> (https://angular-package.dev)",
+  "homepage": "https://github.com/angular-package/ui",
   "peerDependencies": {
     "@angular/common": "^13.2.0",
     "@angular/core": "^13.2.0",
@@ -8,5 +11,24 @@
   },
   "dependencies": {
     "tslib": "^2.3.0"
-  }
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "keywords": [
+    "@angular-package",
+    "@angular-package/ui",
+    "UI",
+    "User interface",
+    "Configurable"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/angular-package/ui"
+  },
+  "bugs": {
+    "url": "https://github.com/angular-package/ui/issues"
+  },
+  "license": "MIT"
 }
