--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-package/ui",
-  "version": "0.0.1-alpha",
+  "version": "1.0.0-alpha.0",
   "description": "Configurable user interface.",
   "author": "@angular-package <contact@angular-package.dev> (https://angular-package.dev)",
   "homepage": "https://github.com/angular-package/ui",
